--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/upgrade": "~2.4.9",
     "@types/core-js": "0.9.35",
     "@cloudinary/angular": "^2.1.1",
+    "angular2-clipboard": "^2.0.14",
     "angular-in-memory-web-api": "0.3.1",
     "ng-chartist": "1.1.0",
     "angular2-google-maps": "~0.17.0",
