--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.1",
     "systemjs": "~0.19.41",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "semantic-ui": "^2.2.10"
   },
   "devDependencies": {
     "@types/chartist": "~0.9.33",
