--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "ng-chartist": "1.1.0",
     "ng2-auto-complete": "^0.12.0",
     "ng2-cloudinary": "^0.9.2",
+    "ng2-file-upload": "^1.2.1",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.1",
     "semantic-ui": "^2.2.10",
