--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chartist": "~0.9.8",
     "core-js": "~2.4.1",
     "jquery": "~3.1.1",
+    "lodash": "^4.17.4",
     "ng-chartist": "1.1.0",
     "ng2-auto-complete": "^0.12.0",
     "ng2-cloudinary": "^0.9.2",
@@ -45,6 +46,7 @@
     "@types/chartist": "~0.9.33",
     "@types/core-js": "0.9.35",
     "@types/jquery": "~2.0.34",
+    "@types/lodash": "ts2.0",
     "@types/node": "~6.0.45",
     "concurrently": "~3.0.0",
     "lite-server": "~2.2.2",
