--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "core-js": "~2.4.1",
     "jquery": "~3.1.1",
     "lodash": "^4.17.4",
+    "moment": "^2.18.1",
     "ng-chartist": "1.1.0",
     "ng2-auto-complete": "^0.12.0",
     "ng2-cloudinary": "^0.9.2",
