--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "ng2-auto-complete": "^0.12.0",
     "ng2-cloudinary": "^0.9.2",
     "ng2-file-upload": "^1.2.1",
-    "ng2-pop-over": "^0.9.37",
+    "ng2-popover": "0.0.14",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.1",
     "semantic-ui": "^2.2.10",
