--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular-in-memory-web-api": "0.3.1",
     "angular2-clipboard": "^2.0.14",
     "angular2-google-maps": "~0.17.0",
+    "angular2-text-mask": "^8.0.4",
     "chartist": "~0.9.8",
     "core-js": "~2.4.1",
     "jquery": "~3.1.1",
@@ -37,6 +38,7 @@
     "ng2-auto-complete": "^0.12.0",
     "ng2-cloudinary": "^0.9.2",
     "ng2-file-upload": "^1.2.1",
+    "ng2-input-mask": "0.0.7",
     "ng2-popover": "0.0.14",
     "reflect-metadata": "~0.1.8",
     "rxjs": "5.0.1",
