--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@cloudinary/angular": "^2.1.1",
     "@types/core-js": "0.9.35",
     "angular-in-memory-web-api": "0.3.1",
+    "angular-sortablejs": "^1.3.1",
     "angular2-clipboard": "^2.0.14",
     "angular2-google-maps": "~0.17.0",
     "angular2-text-mask": "^8.0.4",
